MBS-10478: Fix overflow in chat title

--- a/styles.scss
+++ b/styles.scss
@@ -71,12 +71,6 @@ body:not(.block_ai_chat_replacehelp).hasstickyfooter #ai_chat_button {
            align-items: center;
            width: 40%;
            font-size: 1rem;
-           overflow: visible;
-           .block_ai_chat_title {
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-           }
        }
       .block_ai_chat-stateheader {
         max-width: 200px;
